# sf-flooze

./: .dockerignore  .env.dev  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  FRONTEND.md  MODULES.md  README.md  SETUP.md  TESTING.md  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json
.claude/: memory.md  rules.md
assets/styles/: app.css
config/: reference.php  services.yaml  services_desktop.yaml
desktop/: router.php  start  start.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
erd/: erdfinal.txt
frankenphp/: Caddyfile  docker-entrypoint.sh
frankenphp/conf.d/: app.dev.ini  app.ini  app.prod.ini
migrations/: Version20260428041957.php  Version20260429085049.php  Version20260429085203.php  Version20260504052933.php  Version20260505003057.php  Version20260505062832.php  Version20260507025045.php  Version20260710053029.php  Version20260710055526.php  Version20260711011923.php  Version20260711035129.php
src/Controller/: RegistrationController.php  SecurityController.php
src/Entity/: Account.php  Asset.php  AssetEntry.php  Category.php  Space.php  Transaction.php  User.php
src/Enum/: AccountTypeEnum.php  AssetEntryKindEnum.php  AssetTypeEnum.php  CurrencyEnum.php  SpaceTypeEnum.php  TransactionTypeEnum.php
src/EventListener/: AssetEntryListener.php
src/Form/: RegistrationFormType.php  SpaceFormType.php
src/Repository/: AccountRepository.php  AssetEntryRepository.php  AssetRepository.php  CategoryRepository.php  SpaceRepository.php  (+2 more)
templates/: base.html.twig
(+88 files in other folders)
